erDiagram
  THERAPIST ||--o{ SHIFT : "勤務する"
  THERAPIST ||--o{ RESERVATION : "施術する"
  BED ||--o{ RESERVATION : "使われる"

  THERAPIST {
    string id "t1, t2..."
    string name "表示名"
    string gender "male / female"
  }
  BED {
    string id "b1, b2, b3"
    string name "ベッド A / B / C"
  }
  SHIFT {
    string id "sh1..."
    string therapistId "THERAPIST.id"
    string date "2026-09-08"
    string startTime "09:00"
    string endTime "14:00"
  }
  RESERVATION {
    string id "r1..."
    string userName "利用者名"
    string bedId "BED.id"
    string therapistId "THERAPIST.id"
    string date "2026-09-08"
    string startTime "09:00 施術開始"
    int treatmentMin "15 / 30 / 45"
    string blockEndTime "施術 + 15 分の枠終了"
  }
